Minor dataset list change

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -39,9 +39,7 @@
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "import seaborn as sns\n",
-    "from tensorflow.keras.utils import plot_model\n",
-    "\n",
-    "from dataset_dirs import *"
+    "from tensorflow.keras.utils import plot_model"
    ]
   },
   {
@@ -53,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "trusted": true
    },
@@ -62,23 +60,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dataset1\n",
-      "dataset2\n",
-      "{'dataset1': {}, 'dataset2': {}}\n"
+      "{'dataset1': {'train': 'dataset1\\\\train', 'test': 'dataset1\\\\test', 'val': 'dataset1\\\\val'}, 'dataset2': {'train': 'dataset2\\\\Training and Validation', 'test': 'dataset2\\\\Testing'}}\n",
+      "['dataset1\\\\train', 'dataset2\\\\Training and Validation']\n",
+      "['dataset1\\\\test', 'dataset2\\\\Testing']\n",
+      "['dataset1\\\\val', None]\n"
      ]
     }
    ],
    "source": [
-    "directories = {d :{} for d in DATASETS}\n",
-    "for d in DATASETS:\n",
-    "    # directories[d] = os.path.join(d, d.get(\"train\"))\n",
-    "    print(d)\n",
-    "print(directories)"
+    "DATASETS = {\n",
+    "    \"dataset1\": {\n",
+    "        \"train\": os.path.join(\"dataset1\", \"train\"),\n",
+    "        \"test\": os.path.join(\"dataset1\", \"test\"),\n",
+    "        \"val\": os.path.join(\"dataset1\", \"val\")\n",
+    "    },\n",
+    "    \"dataset2\": {\n",
+    "        \"train\": os.path.join(\"dataset2\", \"Training and Validation\"),\n",
+    "        \"test\": os.path.join(\"dataset2\", \"Testing\")\n",
+    "    },\n",
+    "}\n",
+    "train_dirs = [DATASETS[dataset].get('train') for dataset in DATASETS]\n",
+    "test_dirs = [DATASETS[dataset].get('test') for dataset in DATASETS]\n",
+    "val_dirs = [DATASETS[dataset].get('val') for dataset in DATASETS]\n",
+    "\n",
+    "print(DATASETS)\n",
+    "print(train_dirs)\n",
+    "print(test_dirs)\n",
+    "print(val_dirs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
