A dumpster fire. WIP

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -8,15 +8,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Importing Libraries"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -25,9 +18,74 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import time\n",
+    "import time\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Environment Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dissertation\\Kaggle Data\\wildfire-detection\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chaos\n"
+     ]
+    }
+   ],
+   "source": [
+    "import socket\n",
+    "print(socket.gethostname())\n",
+    "import os\n",
+    "import sys\n",
+    "try:\n",
+    "    os.system(\"nvidia-smi\")\n",
+    "except:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
     "import tensorflow as tf\n",
@@ -51,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "trusted": true
    },
@@ -60,23 +118,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'dataset1': {'train': 'dataset1\\\\train', 'test': 'dataset1\\\\test', 'val': 'dataset1\\\\val'}, 'dataset2': {'train': 'dataset2\\\\Training and Validation', 'test': 'dataset2\\\\Testing'}}\n",
-      "['dataset1\\\\train', 'dataset2\\\\Training and Validation']\n",
-      "['dataset1\\\\test', 'dataset2\\\\Testing']\n",
-      "['dataset1\\\\val', None]\n"
+      "{'dataset_1': {'train': 'dataset_1\\\\train', 'test': 'dataset_1\\\\test', 'val': 'dataset_1\\\\val'}, 'dataset_2': {'train': 'dataset_2\\\\Training and Validation', 'test': 'dataset_2\\\\Testing'}}\n",
+      "['dataset_1\\\\train', 'dataset_2\\\\Training and Validation']\n",
+      "['dataset_1\\\\test', 'dataset_2\\\\Testing']\n",
+      "['dataset_1\\\\val', None]\n",
+      "[('dataset_1\\\\train', 'dataset_1\\\\test', 'dataset_1\\\\val'), ('dataset_2\\\\Training and Validation', 'dataset_2\\\\Testing', None)]\n"
      ]
     }
    ],
    "source": [
     "DATASETS = {\n",
-    "    \"dataset1\": {\n",
-    "        \"train\": os.path.join(\"dataset1\", \"train\"),\n",
-    "        \"test\": os.path.join(\"dataset1\", \"test\"),\n",
-    "        \"val\": os.path.join(\"dataset1\", \"val\")\n",
+    "    \"dataset_1\": {\n",
+    "        \"train\": os.path.join(\"dataset_1\", \"train\"),\n",
+    "        \"test\": os.path.join(\"dataset_1\", \"test\"),\n",
+    "        \"val\": os.path.join(\"dataset_1\", \"val\")\n",
     "    },\n",
-    "    \"dataset2\": {\n",
-    "        \"train\": os.path.join(\"dataset2\", \"Training and Validation\"),\n",
-    "        \"test\": os.path.join(\"dataset2\", \"Testing\")\n",
+    "    \"dataset_2\": {\n",
+    "        \"train\": os.path.join(\"dataset_2\", \"Training and Validation\"),\n",
+    "        \"test\": os.path.join(\"dataset_2\", \"Testing\")\n",
     "    },\n",
     "}\n",
     "train_dirs = [DATASETS[dataset].get('train') for dataset in DATASETS]\n",
@@ -86,12 +145,14 @@
     "print(DATASETS)\n",
     "print(train_dirs)\n",
     "print(test_dirs)\n",
-    "print(val_dirs)"
+    "print(val_dirs)\n",
+    "data_set = list(zip(train_dirs, test_dirs, val_dirs))\n",
+    "print(data_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +164,8 @@
     }
    ],
    "source": [
-    "print(tf.config.get_visible_devices())"
+    "print(tf.config.get_visible_devices())\n",
+    "# print(tf.config.list_physical_devices('GPU'))"
    ]
   },
   {
@@ -115,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "trusted": true
    },
@@ -139,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "trusted": true
    },
@@ -151,45 +213,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "trusted": true
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def samples_from_generators(generators):\n",
+    "    samples = 0\n",
+    "    for generator in generators:\n",
+    "        samples += generator.samples\n",
+    "    return samples\n",
+    "\n",
+    "\n",
+    "def split_dataset(train_generator, val_size=0.2):\n",
+    "    # Calculate the number of samples in the dataset\n",
+    "\n",
+    "    # Calculate the number of samples for validation and training\n",
+    "    val_size = int(val_size * samples)\n",
+    "    train_size = samples - val_size\n",
+    "\n",
+    "    # Split the dataset\n",
+    "    val_dataset = dataset.take(val_size)\n",
+    "    train_dataset = dataset.skip(val_size)\n",
+    "\n",
+    "    return train_dataset, val_dataset\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to create a tf.data.Dataset from ImageDataGenerator\n",
+    "def create_dataset(generator):\n",
+    "    dataset = tf.data.Dataset.from_generator(\n",
+    "        lambda: generator,\n",
+    "        output_types=(tf.float32, tf.float32),\n",
+    "        output_shapes=([None, img_height, img_width, 3], [None])\n",
+    "    )\n",
+    "    dataset = dataset.unbatch().batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
+    "    return dataset\n",
+    "\n",
+    "# original_dataset = create_dataset(original_train_generator)\n",
+    "# augmented_dataset = create_dataset(augmented_train_generator)\n",
+    "\n",
+    "# combined_train_dataset = original_dataset.concatenate(augmented_dataset)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 3316 images belonging to 2 classes.\n",
-      "Found 3316 images belonging to 2 classes.\n"
+      "Found 2815 images belonging to 2 classes.\n",
+      "Found 2815 images belonging to 2 classes.\n",
+      "Found 402 images belonging to 2 classes.\n",
+      "Found 402 images belonging to 2 classes.\n",
+      "Found 1832 images belonging to 2 classes.\n",
+      "Found 1832 images belonging to 2 classes.\n",
+      "[<keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A6FB89B0>, <keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A67FBE00>]\n",
+      "[<keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A6AB7BC0>, None]\n",
+      "[<keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A7055010>, <keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A56397F0>]\n",
+      "[<keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A705BC50>, None]\n",
+      "\n",
+      "[(<keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A6FB89B0>,\n",
+      "  <keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A7055010>),\n",
+      " (<keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A67FBE00>,\n",
+      "  <keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A56397F0>)]\n",
+      "\n",
+      "[(<keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A6AB7BC0>,\n",
+      "  <keras.src.legacy.preprocessing.image.DirectoryIterator object at 0x00000245A705BC50>),\n",
+      " (None, None)]\n"
      ]
     }
    ],
    "source": [
-    "# Original images generator\n",
-    "original_train_generator = original_datagen.flow_from_directory(\n",
-    "    train_dir,\n",
-    "    target_size=(img_height, img_width),\n",
-    "    batch_size=batch_size,\n",
-    "    class_mode='binary',\n",
-    "    color_mode='rgb',\n",
-    "    shuffle=True\n",
-    ")\n",
+    "from pprint import pprint\n",
     "\n",
-    "# Augmented images generator\n",
-    "augmented_train_generator = augmented_datagen.flow_from_directory(\n",
-    "    train_dir,\n",
-    "    target_size=(img_height, img_width),\n",
-    "    batch_size=batch_size,\n",
-    "    class_mode='binary',\n",
-    "    color_mode='rgb',\n",
-    "    shuffle=True\n",
-    ")\n"
+    "original_train_generators = []\n",
+    "original_val_generators = []\n",
+    "augmented_train_generators = []\n",
+    "augmented_val_generators = []\n",
+    "\n",
+    "for d in DATASETS:\n",
+    "    train_dir = DATASETS[d]['train']\n",
+    "    # Apply original and augmented data generators\n",
+    "    original_train_generator = original_datagen.flow_from_directory(\n",
+    "        train_dir,\n",
+    "        target_size=(img_height, img_width),\n",
+    "        batch_size=batch_size,\n",
+    "        class_mode='binary',\n",
+    "        color_mode='rgb',\n",
+    "        shuffle=True\n",
+    "    )\n",
+    "    augmented_train_generator = augmented_datagen.flow_from_directory(\n",
+    "        train_dir,\n",
+    "        target_size=(img_height, img_width),\n",
+    "        batch_size=batch_size,\n",
+    "        class_mode='binary',\n",
+    "        color_mode='rgb',\n",
+    "        shuffle=True\n",
+    "    )\n",
+    "    if \"val\" in DATASETS[d]:\n",
+    "        original_val_generator = original_datagen.flow_from_directory(\n",
+    "            DATASETS[d]['val'],\n",
+    "            target_size=(img_height, img_width),\n",
+    "            batch_size=batch_size,\n",
+    "            class_mode='binary',\n",
+    "            color_mode='rgb',\n",
+    "            shuffle=True\n",
+    "        )\n",
+    "        augmented_val_generator = augmented_datagen.flow_from_directory(\n",
+    "            DATASETS[d]['val'],\n",
+    "            target_size=(img_height, img_width),\n",
+    "            batch_size=batch_size,\n",
+    "            class_mode='binary',\n",
+    "            color_mode='rgb',\n",
+    "            shuffle=True\n",
+    "        )\n",
+    "    else:\n",
+    "        original_val_generator = None\n",
+    "        augmented_val_generator = None\n",
+    "\n",
+    "    original_train_generators.append(original_train_generator)\n",
+    "    augmented_train_generators.append(augmented_train_generator)\n",
+    "    original_val_generators.append(original_val_generator)\n",
+    "    augmented_val_generators.append(augmented_val_generator)\n",
+    "\n",
+    "print(original_train_generators)\n",
+    "print(original_val_generators)\n",
+    "print(augmented_train_generators)\n",
+    "print(augmented_val_generators)\n",
+    "\n",
+    "train_generators = list(zip(original_train_generators, augmented_train_generators))\n",
+    "val_generators = list(zip(original_val_generators, augmented_val_generators))\n",
+    "print(\"\")\n",
+    "pprint(train_generators)\n",
+    "print(\"\")\n",
+    "pprint(val_generators)\n",
+    "# generators = {\"train\" : train_generators, \"val\" : val_generators}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -197,28 +369,28 @@
      "output_type": "stream",
      "text": [
       "Original Dataset Class Counts:\n",
-      "fire: 1658\n",
-      "nofire: 1658\n",
+      "fire: 2586\n",
+      "nofire: 2061\n",
       "\n",
       "Augmented Dataset Class Counts:\n",
-      "fire: 1658\n",
-      "nofire: 1658\n"
+      "fire: 2586\n",
+      "nofire: 2061\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "# Get class indices\n",
-    "class_indices = original_train_generator.class_indices\n",
+    "class_indices = original_train_generators[0].class_indices\n",
     "class_names = list(class_indices.keys())\n",
     "\n",
     "# Get number of samples in each class for the original and augmented datasets\n",
     "original_class_counts = {class_name: 0 for class_name in class_names}\n",
     "augmented_class_counts = {class_name: 0 for class_name in class_names}\n",
     "\n",
-    "for class_name, class_index in class_indices.items():\n",
-    "    original_class_counts[class_name] = sum(original_train_generator.classes == class_index)\n",
-    "    augmented_class_counts[class_name] = sum(augmented_train_generator.classes == class_index)\n",
+    "for original_train_generator, augmented_train_generator in train_generators:\n",
+    "    for class_name, class_index in class_indices.items():\n",
+    "        original_class_counts[class_name] += sum(original_train_generator.classes == class_index)\n",
+    "        augmented_class_counts[class_name] += sum(augmented_train_generator.classes == class_index)\n",
     "\n",
     "# Print the results\n",
     "print(\"Original Dataset Class Counts:\")\n",
@@ -232,9 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_ConcatenateDataset element_spec=(TensorSpec(shape=(None, 224, 224, 3), dtype=tf.float32, name=None), TensorSpec(shape=(None,), dtype=tf.float32, name=None))>\n",
+      "<_ConcatenateDataset element_spec=(TensorSpec(shape=(None, 224, 224, 3), dtype=tf.float32, name=None), TensorSpec(shape=(None,), dtype=tf.float32, name=None))>\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Function to create a tf.data.Dataset from ImageDataGenerator\n",
@@ -247,10 +428,24 @@
     "    dataset = dataset.unbatch().batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
     "    return dataset\n",
     "\n",
-    "original_dataset = create_dataset(original_train_generator)\n",
-    "augmented_dataset = create_dataset(augmented_train_generator)\n",
+    "combined_train_datasets = []\n",
     "\n",
-    "combined_train_dataset = original_dataset.concatenate(augmented_dataset)\n"
+    "for g in train_generators: \n",
+    "    original_train_generator, augmented_train_generator = g\n",
+    "    original_dataset = create_dataset(original_train_generator)\n",
+    "    augmented_dataset = create_dataset(augmented_train_generator)\n",
+    "\n",
+    "    combined_train_dataset = original_dataset.concatenate(augmented_dataset)\n",
+    "    combined_train_datasets.append(combined_train_dataset)\n",
+    "    # Calculate the size of the combined train dataset\n",
+    "    print(combined_train_dataset)\n",
+    "    if val_generators[train_generators.index(g)] is None or val_generators[train_generators.index(g)] == (None, None):\n",
+    "        continue\n",
+    "    # print(f\"Combined train dataset size: {combined_train_size} samples\")\n",
+    "# original_dataset = create_dataset(original_train_generator)\n",
+    "# augmented_dataset = create_dataset(augmented_train_generator)\n",
+    "\n",
+    "# combined_train_dataset = original_dataset.concatenate(augmented_dataset)\n"
    ]
   },
   {
@@ -262,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +470,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Calculate the number of samples in the training dataset\n",
     "train_samples = original_train_generator.samples + augmented_train_generator.samples\n",
     "\n",
@@ -339,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "trusted": true
    },
@@ -356,14 +550,14 @@
     "# Test data generator\n",
     "test_datagen = ImageDataGenerator(rescale=1./255)\n",
     "\n",
-    "test_generator = test_datagen.flow_from_directory(\n",
+    "test_generators = [original_datagen.flow_from_directory(\n",
     "    test_dir,\n",
     "    target_size=(img_height, img_width),\n",
     "    batch_size=batch_size,\n",
     "    class_mode='binary',\n",
     "    color_mode='rgb',\n",
-    "    shuffle=False\n",
-    ")\n",
+    "    shuffle=True\n",
+    ") for test_dir in test_dirs]\n",
     "\n",
     "test_dataset = create_dataset(test_generator)"
    ]
