--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -212,6 +212,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Auxiliary Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Incompatible dataset elements:\n  TensorSpec(shape=(), dtype=tf.int64, name=None) vs.   TensorSpec(shape=(), dtype=tf.int32, name=None)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\data\\ops\\concatenate_op.py:41\u001b[0m, in \u001b[0;36m_ConcatenateDataset.__init__\u001b[1;34m(self, input_dataset, dataset_to_concatenate, name)\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 41\u001b[0m   \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_structure \u001b[38;5;241m=\u001b[39m \u001b[43mtf_nest\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmap_structure\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     42\u001b[0m \u001b[43m      \u001b[49m\u001b[43mcommon_supertype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_dataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43melement_spec\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     43\u001b[0m \u001b[43m      \u001b[49m\u001b[43mdataset_to_concatenate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43melement_spec\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mTypeError\u001b[39;00m, \u001b[38;5;167;01mValueError\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\util\\nest.py:628\u001b[0m, in \u001b[0;36mmap_structure\u001b[1;34m(func, *structure, **kwargs)\u001b[0m\n\u001b[0;32m    544\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Creates a new structure by applying `func` to each atom in `structure`.\u001b[39;00m\n\u001b[0;32m    545\u001b[0m \n\u001b[0;32m    546\u001b[0m \u001b[38;5;124;03mRefer to [tf.nest](https://www.tensorflow.org/api_docs/python/tf/nest)\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    626\u001b[0m \u001b[38;5;124;03m  ValueError: If wrong keyword arguments are provided.\u001b[39;00m\n\u001b[0;32m    627\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m--> 628\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnest_util\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmap_structure\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    629\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnest_util\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mModality\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCORE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mstructure\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[0;32m    630\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\util\\nest_util.py:1065\u001b[0m, in \u001b[0;36mmap_structure\u001b[1;34m(modality, func, *structure, **kwargs)\u001b[0m\n\u001b[0;32m   1064\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m modality \u001b[38;5;241m==\u001b[39m Modality\u001b[38;5;241m.\u001b[39mCORE:\n\u001b[1;32m-> 1065\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_tf_core_map_structure\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mstructure\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1066\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m modality \u001b[38;5;241m==\u001b[39m Modality\u001b[38;5;241m.\u001b[39mDATA:\n",
+      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\util\\nest_util.py:1105\u001b[0m, in \u001b[0;36m_tf_core_map_structure\u001b[1;34m(func, *structure, **kwargs)\u001b[0m\n\u001b[0;32m   1101\u001b[0m entries \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39mflat_structure)\n\u001b[0;32m   1103\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _tf_core_pack_sequence_as(\n\u001b[0;32m   1104\u001b[0m     structure[\u001b[38;5;241m0\u001b[39m],\n\u001b[1;32m-> 1105\u001b[0m     [\u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m entries],\n\u001b[0;32m   1106\u001b[0m     expand_composites\u001b[38;5;241m=\u001b[39mexpand_composites,\n\u001b[0;32m   1107\u001b[0m )\n",
+      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\data\\ops\\concatenate_op.py:37\u001b[0m, in \u001b[0;36m_ConcatenateDataset.__init__.<locals>.common_supertype\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m result \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m---> 37\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo common supertype of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m and \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "\u001b[1;31mTypeError\u001b[0m: No common supertype of TensorSpec(shape=(), dtype=tf.int64, name=None) and TensorSpec(shape=(), dtype=tf.int32, name=None).",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[48], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m random_data \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mDataset\u001b[38;5;241m.\u001b[39mrange(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m      3\u001b[0m empty_data \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mDataset\u001b[38;5;241m.\u001b[39mfrom_tensors(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m combined_train_data \u001b[38;5;241m=\u001b[39m \u001b[43mrandom_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mempty_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(random_data)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(empty_data)\n",
+      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\data\\ops\\dataset_ops.py:1123\u001b[0m, in \u001b[0;36mDatasetV2.concatenate\u001b[1;34m(self, dataset, name)\u001b[0m\n\u001b[0;32m   1119\u001b[0m \u001b[38;5;66;03m# Loaded lazily due to a circular dependency (dataset_ops ->\u001b[39;00m\n\u001b[0;32m   1120\u001b[0m \u001b[38;5;66;03m# concatenate_op -> dataset_ops).\u001b[39;00m\n\u001b[0;32m   1121\u001b[0m \u001b[38;5;66;03m# pylint: disable=g-import-not-at-top,protected-access\u001b[39;00m\n\u001b[0;32m   1122\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpython\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mops\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m concatenate_op\n\u001b[1;32m-> 1123\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mconcatenate_op\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_concatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\data\\ops\\concatenate_op.py:23\u001b[0m, in \u001b[0;36m_concatenate\u001b[1;34m(input_dataset, dataset_to_concatenate, name)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_concatenate\u001b[39m(input_dataset, dataset_to_concatenate, name):  \u001b[38;5;66;03m# pylint: disable=unused-private-name\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_ConcatenateDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_dataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset_to_concatenate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\data\\ops\\concatenate_op.py:45\u001b[0m, in \u001b[0;36m_ConcatenateDataset.__init__\u001b[1;34m(self, input_dataset, dataset_to_concatenate, name)\u001b[0m\n\u001b[0;32m     41\u001b[0m   \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_structure \u001b[38;5;241m=\u001b[39m tf_nest\u001b[38;5;241m.\u001b[39mmap_structure(\n\u001b[0;32m     42\u001b[0m       common_supertype, input_dataset\u001b[38;5;241m.\u001b[39melement_spec,\n\u001b[0;32m     43\u001b[0m       dataset_to_concatenate\u001b[38;5;241m.\u001b[39melement_spec)\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mTypeError\u001b[39;00m, \u001b[38;5;167;01mValueError\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m---> 45\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIncompatible dataset elements:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     46\u001b[0m                   \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00minput_dataset\u001b[38;5;241m.\u001b[39melement_spec\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m vs. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     47\u001b[0m                   \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdataset_to_concatenate\u001b[38;5;241m.\u001b[39melement_spec\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_input_datasets \u001b[38;5;241m=\u001b[39m [input_dataset, dataset_to_concatenate]\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_name \u001b[38;5;241m=\u001b[39m name\n",
+      "\u001b[1;31mTypeError\u001b[0m: Incompatible dataset elements:\n  TensorSpec(shape=(), dtype=tf.int64, name=None) vs.   TensorSpec(shape=(), dtype=tf.int32, name=None)"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a random dataset\n",
+    "random_data = tf.data.Dataset.range(1, 4)\n",
+    "empty_data = tf.data.Dataset.from_tensors(0)\n",
+    "combined_train_data = random_data.concatenate(empty_data)\n",
+    "print(random_data)\n",
+    "print(empty_data)\n",
+    "print(combined_train_data)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -223,30 +268,8 @@
     "        samples += generator.samples\n",
     "    return samples\n",
     "\n",
-    "\n",
-    "def split_dataset(train_generator, val_size=0.2):\n",
-    "    # Calculate the number of samples in the dataset\n",
-    "\n",
-    "    # Calculate the number of samples for validation and training\n",
-    "    val_size = int(val_size * samples)\n",
-    "    train_size = samples - val_size\n",
-    "\n",
-    "    # Split the dataset\n",
-    "    val_dataset = dataset.take(val_size)\n",
-    "    train_dataset = dataset.skip(val_size)\n",
-    "\n",
-    "    return train_dataset, val_dataset\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Function to create a tf.data.Dataset from ImageDataGenerator\n",
-    "def create_dataset(generator):\n",
+    "def create_dataset(generator, batch_size=32):\n",
     "    dataset = tf.data.Dataset.from_generator(\n",
     "        lambda: generator,\n",
     "        output_types=(tf.float32, tf.float32),\n",
@@ -255,10 +278,34 @@
     "    dataset = dataset.unbatch().batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
     "    return dataset\n",
     "\n",
-    "# original_dataset = create_dataset(original_train_generator)\n",
-    "# augmented_dataset = create_dataset(augmented_train_generator)\n",
+    "def split_from_generator(train_generator, augmented_generator=None, val_size=0.2):\n",
+    "    # Calculate the number of samples in the dataset\n",
+    "    train_samples = train_generator.samples\n",
+    "    augment_samples = augmented_generator.samples if augmented_generator else 0\n",
+    "    total_samples = train_samples + augment_samples\n",
+    "    # Calculate the number of samples for validation and training\n",
+    "    val_size = int(val_size * total_samples)\n",
+    "    train_size = total_samples - val_size\n",
     "\n",
-    "# combined_train_dataset = original_dataset.concatenate(augmented_dataset)\n"
+    "    # Create the dataset\n",
+    "    original_dataset = create_dataset(train_generator)\n",
+    "    augmented_dataset = create_dataset(augmented_generator) if augmented_generator else None\n",
+    "\n",
+    "    if augmented_dataset:\n",
+    "        combined_train_dataset = original_dataset.concatenate(augmented_dataset)\n",
+    "    else:\n",
+    "        combined_train_dataset = original_dataset\n",
+    "\n",
+    "    # Split the dataset\n",
+    "    val_dataset = combined_train_dataset.take(val_size)\n",
+    "    train_dataset = combined_train_dataset.skip(val_size)\n",
+    "\n",
+    "    # Print the sizes of the datasets\n",
+    "    print(\"Splitted dataset:\")\n",
+    "    print(f\"Training dataset size: {train_size} samples\")\n",
+    "    print(f\"Validation dataset size: {val_size} samples\")\n",
+    "    return train_dataset, val_dataset\n",
+    "\n"
    ]
   },
   {
@@ -404,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -418,15 +465,7 @@
    ],
    "source": [
     "\n",
-    "# Function to create a tf.data.Dataset from ImageDataGenerator\n",
-    "def create_dataset(generator):\n",
-    "    dataset = tf.data.Dataset.from_generator(\n",
-    "        lambda: generator,\n",
-    "        output_types=(tf.float32, tf.float32),\n",
-    "        output_shapes=([None, img_height, img_width, 3], [None])\n",
-    "    )\n",
-    "    dataset = dataset.unbatch().batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
-    "    return dataset\n",
+    "\n",
     "\n",
     "combined_train_datasets = []\n",
     "\n",
