--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -220,44 +220,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Incompatible dataset elements:\n  TensorSpec(shape=(), dtype=tf.int64, name=None) vs.   TensorSpec(shape=(), dtype=tf.int32, name=None)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\data\\ops\\concatenate_op.py:41\u001b[0m, in \u001b[0;36m_ConcatenateDataset.__init__\u001b[1;34m(self, input_dataset, dataset_to_concatenate, name)\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 41\u001b[0m   \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_structure \u001b[38;5;241m=\u001b[39m \u001b[43mtf_nest\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmap_structure\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     42\u001b[0m \u001b[43m      \u001b[49m\u001b[43mcommon_supertype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_dataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43melement_spec\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     43\u001b[0m \u001b[43m      \u001b[49m\u001b[43mdataset_to_concatenate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43melement_spec\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mTypeError\u001b[39;00m, \u001b[38;5;167;01mValueError\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\util\\nest.py:628\u001b[0m, in \u001b[0;36mmap_structure\u001b[1;34m(func, *structure, **kwargs)\u001b[0m\n\u001b[0;32m    544\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Creates a new structure by applying `func` to each atom in `structure`.\u001b[39;00m\n\u001b[0;32m    545\u001b[0m \n\u001b[0;32m    546\u001b[0m \u001b[38;5;124;03mRefer to [tf.nest](https://www.tensorflow.org/api_docs/python/tf/nest)\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    626\u001b[0m \u001b[38;5;124;03m  ValueError: If wrong keyword arguments are provided.\u001b[39;00m\n\u001b[0;32m    627\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m--> 628\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnest_util\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmap_structure\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    629\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnest_util\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mModality\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCORE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mstructure\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[0;32m    630\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\util\\nest_util.py:1065\u001b[0m, in \u001b[0;36mmap_structure\u001b[1;34m(modality, func, *structure, **kwargs)\u001b[0m\n\u001b[0;32m   1064\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m modality \u001b[38;5;241m==\u001b[39m Modality\u001b[38;5;241m.\u001b[39mCORE:\n\u001b[1;32m-> 1065\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_tf_core_map_structure\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mstructure\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1066\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m modality \u001b[38;5;241m==\u001b[39m Modality\u001b[38;5;241m.\u001b[39mDATA:\n",
-      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\util\\nest_util.py:1105\u001b[0m, in \u001b[0;36m_tf_core_map_structure\u001b[1;34m(func, *structure, **kwargs)\u001b[0m\n\u001b[0;32m   1101\u001b[0m entries \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39mflat_structure)\n\u001b[0;32m   1103\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _tf_core_pack_sequence_as(\n\u001b[0;32m   1104\u001b[0m     structure[\u001b[38;5;241m0\u001b[39m],\n\u001b[1;32m-> 1105\u001b[0m     [\u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m entries],\n\u001b[0;32m   1106\u001b[0m     expand_composites\u001b[38;5;241m=\u001b[39mexpand_composites,\n\u001b[0;32m   1107\u001b[0m )\n",
-      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\data\\ops\\concatenate_op.py:37\u001b[0m, in \u001b[0;36m_ConcatenateDataset.__init__.<locals>.common_supertype\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m result \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m---> 37\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo common supertype of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m and \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[1;31mTypeError\u001b[0m: No common supertype of TensorSpec(shape=(), dtype=tf.int64, name=None) and TensorSpec(shape=(), dtype=tf.int32, name=None).",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[48], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m random_data \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mDataset\u001b[38;5;241m.\u001b[39mrange(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m      3\u001b[0m empty_data \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mDataset\u001b[38;5;241m.\u001b[39mfrom_tensors(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m combined_train_data \u001b[38;5;241m=\u001b[39m \u001b[43mrandom_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mempty_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(random_data)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(empty_data)\n",
-      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\data\\ops\\dataset_ops.py:1123\u001b[0m, in \u001b[0;36mDatasetV2.concatenate\u001b[1;34m(self, dataset, name)\u001b[0m\n\u001b[0;32m   1119\u001b[0m \u001b[38;5;66;03m# Loaded lazily due to a circular dependency (dataset_ops ->\u001b[39;00m\n\u001b[0;32m   1120\u001b[0m \u001b[38;5;66;03m# concatenate_op -> dataset_ops).\u001b[39;00m\n\u001b[0;32m   1121\u001b[0m \u001b[38;5;66;03m# pylint: disable=g-import-not-at-top,protected-access\u001b[39;00m\n\u001b[0;32m   1122\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpython\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mops\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m concatenate_op\n\u001b[1;32m-> 1123\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mconcatenate_op\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_concatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\data\\ops\\concatenate_op.py:23\u001b[0m, in \u001b[0;36m_concatenate\u001b[1;34m(input_dataset, dataset_to_concatenate, name)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_concatenate\u001b[39m(input_dataset, dataset_to_concatenate, name):  \u001b[38;5;66;03m# pylint: disable=unused-private-name\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_ConcatenateDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_dataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset_to_concatenate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\tensorflow\\python\\data\\ops\\concatenate_op.py:45\u001b[0m, in \u001b[0;36m_ConcatenateDataset.__init__\u001b[1;34m(self, input_dataset, dataset_to_concatenate, name)\u001b[0m\n\u001b[0;32m     41\u001b[0m   \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_structure \u001b[38;5;241m=\u001b[39m tf_nest\u001b[38;5;241m.\u001b[39mmap_structure(\n\u001b[0;32m     42\u001b[0m       common_supertype, input_dataset\u001b[38;5;241m.\u001b[39melement_spec,\n\u001b[0;32m     43\u001b[0m       dataset_to_concatenate\u001b[38;5;241m.\u001b[39melement_spec)\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mTypeError\u001b[39;00m, \u001b[38;5;167;01mValueError\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m---> 45\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIncompatible dataset elements:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     46\u001b[0m                   \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00minput_dataset\u001b[38;5;241m.\u001b[39melement_spec\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m vs. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     47\u001b[0m                   \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdataset_to_concatenate\u001b[38;5;241m.\u001b[39melement_spec\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_input_datasets \u001b[38;5;241m=\u001b[39m [input_dataset, dataset_to_concatenate]\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_name \u001b[38;5;241m=\u001b[39m name\n",
-      "\u001b[1;31mTypeError\u001b[0m: Incompatible dataset elements:\n  TensorSpec(shape=(), dtype=tf.int64, name=None) vs.   TensorSpec(shape=(), dtype=tf.int32, name=None)"
-     ]
-    }
-   ],
-   "source": [
-    "# Create a random dataset\n",
-    "random_data = tf.data.Dataset.range(1, 4)\n",
-    "empty_data = tf.data.Dataset.from_tensors(0)\n",
-    "combined_train_data = random_data.concatenate(empty_data)\n",
-    "print(random_data)\n",
-    "print(empty_data)\n",
-    "print(combined_train_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -278,39 +240,22 @@
     "    dataset = dataset.unbatch().batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
     "    return dataset\n",
     "\n",
-    "def split_from_generator(train_generator, augmented_generator=None, val_size=0.2):\n",
-    "    # Calculate the number of samples in the dataset\n",
-    "    train_samples = train_generator.samples\n",
-    "    augment_samples = augmented_generator.samples if augmented_generator else 0\n",
-    "    total_samples = train_samples + augment_samples\n",
+    "def val_split(dataset, samples=None, val_size=0.2):\n",
     "    # Calculate the number of samples for validation and training\n",
-    "    val_size = int(val_size * total_samples)\n",
-    "    train_size = total_samples - val_size\n",
-    "\n",
-    "    # Create the dataset\n",
-    "    original_dataset = create_dataset(train_generator)\n",
-    "    augmented_dataset = create_dataset(augmented_generator) if augmented_generator else None\n",
-    "\n",
-    "    if augmented_dataset:\n",
-    "        combined_train_dataset = original_dataset.concatenate(augmented_dataset)\n",
-    "    else:\n",
-    "        combined_train_dataset = original_dataset\n",
-    "\n",
-    "    # Split the dataset\n",
-    "    val_dataset = combined_train_dataset.take(val_size)\n",
-    "    train_dataset = combined_train_dataset.skip(val_size)\n",
-    "\n",
+    "    val_size = int(val_size * samples)\n",
+    "    train_size = samples - val_size\n",
     "    # Print the sizes of the datasets\n",
     "    print(\"Splitted dataset:\")\n",
     "    print(f\"Training dataset size: {train_size} samples\")\n",
     "    print(f\"Validation dataset size: {val_size} samples\")\n",
-    "    return train_dataset, val_dataset\n",
-    "\n"
+    "    val_dataset = dataset.take(val_size)\n",
+    "    train_dataset = dataset.skip(val_size)\n",
+    "    return train_dataset, val_dataset\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -342,10 +287,8 @@
    "source": [
     "from pprint import pprint\n",
     "\n",
-    "original_train_generators = []\n",
-    "original_val_generators = []\n",
-    "augmented_train_generators = []\n",
-    "augmented_val_generators = []\n",
+    "train_datasets = []\n",
+    "val_datasets = []\n",
     "\n",
     "for d in DATASETS:\n",
     "    train_dir = DATASETS[d]['train']\n",
@@ -366,6 +309,11 @@
     "        color_mode='rgb',\n",
     "        shuffle=True\n",
     "    )\n",
+    "\n",
+    "    train_dataset = create_dataset(original_train_generator)\n",
+    "    augmented_train_dataset = create_dataset(augmented_train_generator)\n",
+    "    combined_train_dataset = train_dataset.concatenate(augmented_train_dataset)\n",
+    "\n",
     "    if \"val\" in DATASETS[d]:\n",
     "        original_val_generator = original_datagen.flow_from_directory(\n",
     "            DATASETS[d]['val'],\n",
@@ -383,32 +331,20 @@
     "            color_mode='rgb',\n",
     "            shuffle=True\n",
     "        )\n",
+    "        val_dataset = create_dataset(original_val_generator)\n",
+    "        augmented_val_dataset = create_dataset(augmented_val_generator)\n",
+    "        combined_val_dataset = val_dataset.concatenate(augmented_val_dataset)\n",
+    "        \n",
     "    else:\n",
-    "        original_val_generator = None\n",
-    "        augmented_val_generator = None\n",
+    "        train_dataset, val_dataset = val_split(combined_train_dataset, samples_from_generators([original_train_generator, augmented_train_generator]))\n",
     "\n",
-    "    original_train_generators.append(original_train_generator)\n",
-    "    augmented_train_generators.append(augmented_train_generator)\n",
-    "    original_val_generators.append(original_val_generator)\n",
-    "    augmented_val_generators.append(augmented_val_generator)\n",
-    "\n",
-    "print(original_train_generators)\n",
-    "print(original_val_generators)\n",
-    "print(augmented_train_generators)\n",
-    "print(augmented_val_generators)\n",
-    "\n",
-    "train_generators = list(zip(original_train_generators, augmented_train_generators))\n",
-    "val_generators = list(zip(original_val_generators, augmented_val_generators))\n",
-    "print(\"\")\n",
-    "pprint(train_generators)\n",
-    "print(\"\")\n",
-    "pprint(val_generators)\n",
-    "# generators = {\"train\" : train_generators, \"val\" : val_generators}"
+    "    train_datasets.append(combined_train_dataset)\n",
+    "    val_datasets.append(combined_val_dataset)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -453,6 +389,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -474,10 +417,10 @@
     "    original_dataset = create_dataset(original_train_generator)\n",
     "    augmented_dataset = create_dataset(augmented_train_generator)\n",
     "\n",
-    "    combined_train_dataset = original_dataset.concatenate(augmented_dataset)\n",
-    "    combined_train_datasets.append(combined_train_dataset)\n",
+    "    combined_dataset = original_dataset.concatenate(augmented_dataset)\n",
+    "    combined_train_datasets.append(combined_dataset)\n",
     "    # Calculate the size of the combined train dataset\n",
-    "    print(combined_train_dataset)\n",
+    "    print(combined_dataset)\n",
     "    if val_generators[train_generators.index(g)] is None or val_generators[train_generators.index(g)] == (None, None):\n",
     "        continue\n",
     "    # print(f\"Combined train dataset size: {combined_train_size} samples\")\n",
@@ -517,8 +460,8 @@
     "train_size = train_samples - val_size\n",
     "\n",
     "# Split the combined dataset\n",
-    "val_dataset = combined_train_dataset.take(val_size)\n",
-    "train_dataset = combined_train_dataset.skip(val_size)\n",
+    "val_dataset = combined_dataset.take(val_size)\n",
+    "train_dataset = combined_dataset.skip(val_size)\n",
     "\n",
     "# Print the sizes of the datasets\n",
     "print(f\"Training dataset size: {train_size} samples\")\n",
@@ -933,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +892,7 @@
     }
    ],
    "source": [
-    "print(\"Training data evaluation\\n\", model.evaluate(combined_train_dataset, steps=steps_per_epoch))\n",
+    "print(\"Training data evaluation\\n\", model.evaluate(combined_dataset, steps=steps_per_epoch))\n",
     "print(\"Test data evaluation\\n\", model.evaluate(test_dataset, steps=validation_steps))"
    ]
   },
